--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link 
-      rel="icon" href="https://i.ibb.co/XV2c1d6/logo.png"
-    />
+    <link rel="icon" href="https://i.ibb.co/XV2c1d6/logo.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
